Fixed about sizing on mobile

--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -1,5 +1,6 @@
 .about-container {
   width: 80%;
+  min-height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
